--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>Shopping Basket</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header class="py-3 border-bottom">
             <div class="container d-flex justify-content-between align-items-center">
             <h1 class="logo">World Peas</h1>
             <nav>
-                <ul class="d-flex list-unstyled m-0 gap-4">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">About</a></li>
+                <ul class="d-flex list-unstyled m-0 gap-4 ">
+                    <li><a href="#" >Home</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">About</a></li>
                 </ul>
             </nav>
             <button class="btn btn-outline-dark">Basket</button>
@@ -28,52 +28,52 @@
             <!-- Basket Items -->
             <div class="col-md-8">
                 <div class="basket-item p-3 d-flex align-items-center border rounded mb-3">
-                <img src="img/Heirloom tomato.jpg" alt="Heirloom tomato" class="img-fluid rounded me-3">
-                <div>
-                    <h5 class="mb-0">Heirloom tomato</h5>
-                    <small class="text-muted">$5.99 / kg</small>
-                </div>
-                <span class="ms-auto">$5.99</span>
+                    <img src="img/Heirloom tomato.jpg" alt="Heirloom tomato" class="img-fluid rounded me-3">
+                    <div>
+                        <h5 class="mb-0">Heirloom tomato</h5>
+                        <small class="text-muted">$5.99 / kg</small>
+                    </div>
+                    <span class="ms-auto">$5.99</span>
                 </div>
                 <div class="basket-item p-3 d-flex align-items-center border rounded mb-3">
-                <img src="img/Organic ginger.jpg" alt="Organic ginger" class="img-fluid rounded me-3">
-                <div>
-                    <h5 class="mb-0">Organic ginger</h5>
-                    <small class="text-muted">$12.99 / kg</small>
-                </div>
-                <span class="ms-auto">$6.50</span>
+                    <img src="img/Organic ginger.jpg" alt="Organic ginger" class="img-fluid rounded me-3">
+                    <div>
+                        <h5 class="mb-0">Organic ginger</h5>
+                        <small class="text-muted">$12.99 / kg</small>
+                    </div>
+                    <span class="ms-auto">$6.50</span>
                 </div>
                 <div class="basket-item p-3 d-flex align-items-center border rounded">
-                <img src="img/Sweet onion.jpg" alt="Sweet onion" class="img-fluid rounded me-3">
-                <div>
-                    <h5 class="mb-0">Sweet onion</h5>
-                    <small class="text-muted">$2.99 / kg</small>
-                </div>
-                <span class="ms-auto">$14.95</span>
+                    <img src="img/Sweet onion.jpg" alt="Sweet onion" class="img-fluid rounded me-3 object-fit-sm-contain border rounded">
+                    <div>
+                        <h5 class="mb-0">Sweet onion</h5>
+                        <small class="text-muted">$2.99 / kg</small>
+                    </div>
+                    <span class="ms-auto">$14.95</span>
                 </div>
             </div>
             <!-- Order Summary -->
             <div class="col-md-4">
                 <div class="order-summary p-4 border rounded">
-                <h5 class="mb-4">Order summary</h5>
-                <div class="d-flex justify-content-between mb-2">
-                    <span>Subtotal</span>
-                    <span>$27.44</span>
-                </div>
-                <div class="d-flex justify-content-between mb-2">
-                    <span>Shipping</span>
-                    <span>$3.99</span>
-                </div>
-                <div class="d-flex justify-content-between mb-3">
-                    <span>Tax</span>
-                    <span>$2.00</span>
-                </div>
-                <hr>
-                <div class="d-flex justify-content-between fw-bold mb-4">
-                    <span>Total</span>
-                    <span>$33.43</span>
-                </div>
-                <button class="btn btn-success w-100">Continue to payment</button>
+                    <h5 class="mb-4">Order summary</h5>
+                    <div class="d-flex justify-content-between mb-2">
+                        <span>Subtotal</span>
+                        <span>$27.44</span>
+                    </div>
+                    <div class="d-flex justify-content-between mb-2">
+                        <span>Shipping</span>
+                        <span>$3.99</span>
+                    </div>
+                    <div class="d-flex justify-content-between mb-3">
+                        <span>Tax</span>
+                        <span>$2.00</span>
+                    </div>
+                    <hr>
+                    <div class="d-flex justify-content-between fw-bold mb-4">
+                        <span>Total</span>
+                        <span>$33.43</span>
+                    </div>
+                    <button class="btn btn-success w-100">Continue to payment</button>
                 </div>
             </div>
             </div>
